# apps/go/docs/swagger.yaml
@@ -247,16 +247,12 @@ components:
           type: array
           uniqueItems: false
       required:
-      - brand
-      - category
       - id
-      - img_url
       - inventory
       - name
       - original_price_idr
       - path
       - price_idr
-      - rating
       - rating_count
       type: object
     ProductVariant:
