# apps/js/src/model/product.ts
@@ -12,13 +12,13 @@ export type Product = {
 	path: string;
 	name: string;
 	description?: string;
-	brand: string;
-	category: string;
-	img_url: string;
+	brand?: string;
+	category?: string;
+	img_url?: string;
 	price_idr: number;
 	original_price_idr: number;
 	inventory: number;
-	rating: number;
+	rating?: number;
 	rating_count: number;
 	variants?: ProductVariant[];
 };
